# siglent_driver

./: .gitignore  README.md  pyproject.toml
examples/: README.md  cc_load.py  cc_load_5a.py  common.py  current_sequence_dict.py  dcir_battery_test.py
scripts/: exercise_sdl1030.py
src/siglent_driver/: __init__.py  core.py  logging_utils.py  siglent.py
tests/: test_examples_common.py  test_siglent.py
